tests/e2e/semantics/service_block_output.story
http server as a, b
    a = 0
